...
    android:layout_height="match_parent"
    android:background="@drawable/action_bar2"
    tools:context=".Login2">


    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="16sp"
        android:background="@drawable/button_bg"
        android:textStyle="bold"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter user name"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:boxCornerRadiusBottomEnd="20dp"
...
        app:layout_constraintTop_toBottomOf="@+id/Name"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".8" >

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/pass"
        android:layout_height="match_parent"
        android:maxLength="22"
        android:inputType="textPassword"
        android:ems="15"/>

    </com.google.android.material.textfield.TextInputLayout>
...
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/Register1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register here"
        app:layout_constraintWidth_percent=".8"
        android:textColor="#4D9CAE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toEndOf="@+id/regQuestion"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.3" />
    <TextView
        android:id="@+id/ForgPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password"
        android:textColor="#4D9CAE"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
